--- a/index.html
+++ b/index.html
@@ -9,54 +9,61 @@
   <!-- Bootstrap core CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="image-slide.css">
   <!-- Favicons -->
   <script src="https://kit.fontawesome.com/59443b8a75.js" crossorigin="anonymous"></script>
   <meta name="theme-color" content="#7952b3">
   <!-- Custom styles for this template -->
   <link href="https://fonts.googleapis.com/css?family=Playfair+Display:700,900&amp;display=swap" rel="stylesheet">
   <!-- Custom styles for this template -->
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 
-<body>
+<body id="content-page">
+  <style>
+    .bd-placeholder-img {
+    font-size: 1.125rem;
+    text-anchor: middle;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    user-select: none;
+  }
+  @media (max-width : 768px) {
+    .bd-placeholder-img-lg {
+        font-size: 3.5rem;
+      }
+  }
+  </style>
+
+  <!-- Icon -->
   <div class="container-fluid fixed-bottom" style="z-index: 9999;">
-    <a href="" class="">
-      <i class="fa-solid fa-envelope d-flex justify-content-end m-4" style="font-size: 42px;"></i>
+    <a href="#content-page" class="icon float-end">
+      <i class="fa-solid fa-circle-up m-3"></i>
     </a>
   </div>
-<!-- Header Top -->
-<div class="container">
-  <header class="blog-header py-3">
-    <div class="row flex-nowrap justify-content-between align-items-center">
-      <div class="col-4 pt-1">
-        <a href="#"></a>
-      </div>
-      <div class="col-4 text-center">
-        <a class="blog-header-logo text-dark" href="#">Kantor</a>
-      </div>
-      <div class="col-4 d-flex justify-content-end align-items-center">
-        <a class="link-secondary" href="#" aria-label="Search">
-          <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="mx-3" role="img" viewBox="0 0 24 24"><title>Search</title><circle cx="10.5" cy="10.5" r="7.5"></circle><path d="M21 21l-5.2-5.2"></path></svg>
-        </a>
-        <a class="btn btn-sm btn-outline-secondary" onclick="alert('Maaf fitur belum bisa digunakan')">Sign up</a>
+<!-- Navbar -->
+  <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
+    <div class="container p-lg-2">
+      <a class="navbar-brand" href="#">Navbar</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
+        <div class="navbar-nav">
+          <a class="nav-link active" href="#">HOME</a>
+          <a class="nav-link active" href="#home">TENTANG KAMI</a>
+          <a class="nav-link active" href="#">PROFIL NOTARIS & PPAT</a>
+          <a class="nav-link active" href="#">NOTARIS</a>
+          <a class="nav-link active" href="#">PPAT</a>
+          <a class="nav-link active" href="#">CONTACT</a>
+        </div>
       </div>
     </div>
-  </header>
-<!-- End Header Top-->
-<!-- Navbar -->
-  <div class="nav-scroller py-1 mb-2">
-    <nav class="nav d-flex justify-content-center">
-      <a class="p-2 link" href="#">Home</a>
-      <a class="p-2 link" href="#">Tentang Kami</a>
-      <a class="p-2 link" href="#">Notaris</a>
-      <a class="p-2 link" href="#">PPAT</a>
-      <a class="p-2 link" href="#">Profil Notaris & PPAT</a>
-      <a class="p-2 link" href="#">Contact</a>
-    </nav>
-  </div>
-</div>
+  </nav>
 <!-- End Navbar -->
+
 <!-- Image Slider  -->
-<div class="container">
+<div class="container mt-3">
   <div class=" mb-4 text-white rounded bg-dark">
     <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-indicators">
@@ -67,27 +74,12 @@
       <div class="carousel-inner">
         <div class="carousel-item active">
           <img src="img/Card 1.jpg" class="d-block w-100" alt="Foto 1" width="1000" height="400">
-            <div class="carousel-caption d-md-block col-md-6 text-start">
-              <h1 class="display-4 fst-italic">Title of a longer featured blog post</h1>
-              <p class="lead my-3">Multiple lines of text that form the lede, informing new readers quickly and efficiently about what’s most interesting in this post’s contents.</p>
-              <p class="lead mb-2"><a href="#" class="text-white fw-bold">Continue reading...</a></p>
-          </div>
         </div>
         <div class="carousel-item">
           <img src="img/foto1.jpg" class="d-block w-100" alt="Foto 2" width="1000" height="400">
-          <div class="carousel-caption d-md-block col-md-6 slide-text">
-            <h1 class="display-4 fst-italic">Title of a longer featured blog post</h1>
-            <p class="lead my-3">Multiple lines of text that form the lede, informing new readers quickly and efficiently about what’s most interesting in this post’s contents.</p>
-            <p class="lead mb-2"><a href="#" class="text-white fw-bold">Continue reading...</a></p>
-          </div>
         </div>
         <div class="carousel-item">
           <img src="img/foto2.jpg" class="d-block w-100" alt="Foto 3" width="1000" height="400">
-          <div class="carousel-caption d-md-block col-md-6 slide-text">
-            <h1 class="display-4 fst-italic">Title of a longer featured blog post</h1>
-            <p class="lead my-3">Multiple lines of text that form the lede, informing new readers quickly and efficiently about what’s most interesting in this post’s contents.</p>
-            <p class="lead mb-2"><a href="#" class="text-white fw-bold">Continue reading...</a></p>
-        </div>
         </div>
       </div>
       <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -105,10 +97,10 @@
 
 <!-- Card -->
 <div class="container">
-  <div class="row mb-2">
-    <div class="col-md-6 info">
-      <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
-        <div class="col p-4 d-flex flex-column position-static">
+  <div class="row mb-2" >
+    <div class="col-md-6 info" >
+      <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative" >
+        <div class="col p-4 d-flex flex-column position-static" >
           <strong class="d-inline-block mb-2 text-primary">Notaris</strong>
           <h3 class="mb-0">Artikel & Informasi</h3>
           <br>
@@ -120,9 +112,9 @@
         </div>
       </div>
     </div>
-    <div class="col-md-6 info">
-      <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
-        <div class="col p-4 d-flex flex-column position-static">
+    <div class="col-md-6 info" >
+      <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative" >
+        <div class="col p-4 d-flex flex-column position-static" >
           <strong class="d-inline-block mb-2 text-success">PPAT</strong>
           <h3 class="mb-0">Artikel & Informasi</h3>
           <br>
@@ -139,10 +131,11 @@
 <!-- End Card -->
 
   <!-- Welcome -->
+
   <section id="home">
     <div class="container">
       <div class="row g-5">
-      <div class="col-md-8">
+      <div class="col-md-12">
         <article class="blog-post">
           <h2 class="blog-post-title fst-italic";">Welcome Reading !</h2>
           <p class="blog-post-meta">November, 02 2022 oleh Admin</a></p>
@@ -163,52 +156,48 @@
           <p>Untuk hal-hal lain yang tidak ditemukan pada tautan dan artikel yang kami sediakan di web site ini, atau ingin menanyakan informasi lebih lanjut, tinggalkan pesan di form yang kami sediakan di menu Hubungi Kami dengan mengisi nama, email dan pesan. Notaris atau Legal Officer kantor kami akan membalas pesan dalam jangka waktu maksimum 2x24 jam hari kerja.</p>
         </article>
       </div>
+      </div>
     </div>
-    </div>
-    
-  </section>
-</main>
+  </div>
+</div>
+</section>
 <!-- End Welcome -->
+<section id="artikel">
+  <div class="container">
+    <h2 class="blog-post-title fst-italic">Artikel & Informasi Tentang Notaris</h2>
+    <div class="row g-3 mb-4 mt-2" data-aos="fade-up" data-duration="2000">
+      <div class="col-md-6">
+        <div class="card">
+          <div class="card-body">
+            <h2 class="blog-post-title fst-italic">Apa itu Notaris ?</h2>
+            <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+            <a href="#" class="btn btn-primary">Baca selanjutnya ></a>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-6">
+        <div class="card">
+          <div class="card-body">
+            <h2 class="blog-post-title fst-italic">Macam-Macam Akta !</h2>
+            <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+            <a href="#" class="btn btn-primary">Baca selanjutnya ></a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
 
-<footer class="bd-footer py-5 mt-2" style="background-color: #f2f2fe;">
+
+
+<footer class="bd-footer py-5 mt-4" style="background-color: #f2f2fe;">
   <div class="container">
     <div class="row">
-      <div class="col-lg-3 mb-3">
+      <div class="col-lg-6 mb-3">
         <a class="d-inline-flex align-items-center mb-2 link-dark text-decoration-none" href="/" aria-label="Bootstrap">
           <svg xmlns="http://www.w3.org/2000/svg" width="40" height="32" class="d-block me-2" viewBox="0 0 118 94" role="img"><title>Bootstrap</title><path fill-rule="evenodd" clip-rule="evenodd" d="M24.509 0c-6.733 0-11.715 5.893-11.492 12.284.214 6.14-.064 14.092-2.066 20.577C8.943 39.365 5.547 43.485 0 44.014v5.972c5.547.529 8.943 4.649 10.951 11.153 2.002 6.485 2.28 14.437 2.066 20.577C12.794 88.106 17.776 94 24.51 94H93.5c6.733 0 11.714-5.893 11.491-12.284-.214-6.14.064-14.092 2.066-20.577 2.009-6.504 5.396-10.624 10.943-11.153v-5.972c-5.547-.529-8.934-4.649-10.943-11.153-2.002-6.484-2.28-14.437-2.066-20.577C105.214 5.894 100.233 0 93.5 0H24.508zM80 57.863C80 66.663 73.436 72 62.543 72H44a2 2 0 01-2-2V24a2 2 0 012-2h18.437c9.083 0 15.044 4.92 15.044 12.474 0 5.302-4.01 10.049-9.119 10.88v.277C75.317 46.394 80 51.21 80 57.863zM60.521 28.34H49.948v14.934h8.905c6.884 0 10.68-2.772 10.68-7.727 0-4.643-3.264-7.207-9.012-7.207zM49.948 49.2v16.458H60.91c7.167 0 10.964-2.876 10.964-8.281 0-5.406-3.903-8.178-11.425-8.178H49.948z" fill="currentColor"></path></svg>
           <span class="fs-5">NOTARIS & PPAT <br> AGUS</span>
         </a>
-        <ul class="list-unstyled small text-muted">
-        </ul>
-      </div>
-      <div class="col-6 col-lg-2 offset-lg-1 mb-3">
-        <h5>Links</h5>
-        <ul class="list-unstyled">
-          <li class="mb-2"><a href="#">Home</a></li>
-          <li class="mb-2"><a href="#">Tentang Kami</a></li>
-          <li class="mb-2"><a href="#">Notaris</a></li>
-          <li class="mb-2"><a href="#">PPAT</a></li>
-          <li class="mb-2"><a href="#">Profil Notaris & PPAT</a></li>
-          <li class="mb-2"><a href="#">Contact</a></li>
-        </ul>
-      </div>
-      <div class="col-6 col-lg-2 mb-3">
-        <h5>Archives</h5>
-        <ul class="list-unstyled">
-          <li class="mb-2"><a href="">November 2022</a></li>
-          <li class="mb-2"><a href="">Desember 2022</a></li>
-          <li class="mb-2"><a href="">Januari 2023</a></li>
-          <li class="mb-2"><a href="">Februari 2023</a></li>
-          <li class="mb-2"><a href="">Maret 2023</a></li>
-        </ul>
-      </div>
-      <div class="col-6 col-lg-2 mb-3">
-        <h5>Recent Posts</h5>
-        <ul class="list-unstyled">
-        </ul>
-      </div>
-      <div class="col-6 col-lg-2 mb-3">
-        <h5>Social Media</h5>
         <ol class="list-unstyled ">
           <li class="mb-2">
             <a href="#" style="text-decoration: none;">
@@ -241,6 +230,28 @@
             </a>
           </li>
         </ol>
+        <strong>&copy; Copyright 2022</strong>
+      </div>
+      <div class="col-6 col-lg-3 mb-3">
+        <h5>Links</h5>
+        <ul class="list-unstyled">
+          <li class="mb-2"><a href="#">Home</a></li>
+          <li class="mb-2"><a href="#">Tentang Kami</a></li>
+          <li class="mb-2"><a href="#">Notaris</a></li>
+          <li class="mb-2"><a href="#">PPAT</a></li>
+          <li class="mb-2"><a href="#">Profil Notaris & PPAT</a></li>
+          <li class="mb-2"><a href="#">Contact</a></li>
+        </ul>
+      </div>
+      <div class="col-6 col-lg-3 mb-3">
+        <h5>Archives</h5>
+        <ul class="list-unstyled">
+          <li class="mb-2"><a href="">November 2022</a></li>
+          <li class="mb-2"><a href="">Desember 2022</a></li>
+          <li class="mb-2"><a href="">Januari 2023</a></li>
+          <li class="mb-2"><a href="">Februari 2023</a></li>
+          <li class="mb-2"><a href="">Maret 2023</a></li>
+        </ul>
       </div>
     </div>
   </div>
@@ -249,5 +260,9 @@
 <!-- Javascript-->
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.min.js" integrity="sha384-IDwe1+LCz02ROU9k972gdyvl+AESN10+x7tBKgc9I5HFtuNz0wWnPclzo6p9vxnk" crossorigin="anonymous"></script>
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <script>
+    AOS.init();
+  </script>
   </body>
 </html>
