--- a/profil.html
+++ b/profil.html
@@ -10,6 +10,11 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="nav-style.css">
 
+    <!-- Font Style -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@500&display=swap" rel="stylesheet">
+
     <!-- Icons -->
     <script src="https://kit.fontawesome.com/59443b8a75.js" crossorigin="anonymous"></script>
 </head>
@@ -29,10 +34,10 @@
           <i class="fa fa-bars" id="button"></i>
           <i class="fa fa-times"id="close"></i>
       </label>
-      <h1>Hello World !</h1>
+      <h5>NOTARIS & PPAT <br> Agus Priyantoko, SH., MKn., MH.</h5>
       <ul class="list-unstyled">
         <li><a href="index.html">Home</a></li>
-        <li><a href="#tk">Tentang Kami</a></li>
+        <li><a href="#">Tentang Kami</a></li>
         <li><a href="#">Notaris</a></li>
         <li><a href="#">PPAT</a></li>
         <li><a href="profil.html">Profil Notaris & PPAT</a></li>
