--- a/index.html
+++ b/index.html
@@ -16,11 +16,14 @@
   <meta name="theme-color" content="#7952b3">
   <!-- Custom styles for this template -->
   <link href="https://fonts.googleapis.com/css?family=Playfair+Display:700,900&amp;display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@500&display=swap" rel="stylesheet">
   <!-- Custom styles for this template -->
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 
-<body id="content-page">
+<body id="content-page" style="background-color: #fafafa;">
   <style>
     .bd-placeholder-img {
     font-size: 1.125rem;
@@ -54,7 +57,7 @@
     <h5>NOTARIS & PPAT <br> Agus Priyantoko, SH., MKn., MH.</h5>
     <ul class="list-unstyled">
       <li><a href="index.html">Home</a></li>
-      <li><a href="#tk">Tentang Kami</a></li>
+      <li><a href="#">Tentang Kami</a></li>
       <li><a href="#">Notaris</a></li>
       <li><a href="#">PPAT</a></li>
       <li><a href="profil.html">Profil Notaris & PPAT</a></li>
@@ -65,7 +68,6 @@
 <!-- End Navbar -->
 
 <!-- Image Slider  -->
-<div class="container mt-3">
   <div class="mb-4">
     <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-indicators">
@@ -75,13 +77,13 @@
       </div>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="img/Card 1.jpg" class="d-block w-100" alt="Foto 1" width="1000" height="585">
+          <img src="img/Card 1.jpg" class="d-block w-100" alt="Foto 1">
         </div>
         <div class="carousel-item">
-          <img src="img/foto1.jpg" class="d-block w-100" alt="Foto 2" width="1000" height="585">
+          <img src="img/foto1.jpg" class="d-block w-100" alt="Foto 2">
         </div>
         <div class="carousel-item">
-          <img src="img/foto2.jpg" class="d-block w-100" alt="Foto 3" width="1000" height="585">
+          <img src="img/foto2.jpg" class="d-block w-100" alt="Foto 3">
         </div>
       </div>
       <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -94,46 +96,8 @@
       </button>
       </div>
   </div>
-</div>
 <!-- End Image Slider -->
-
-<!-- Card -->
-<div class="container">
-  <div class="row mb-2" >
-    <div class="col-md-6 info" >
-      <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative" >
-        <div class="col p-4 d-flex flex-column position-static" >
-          <strong class="d-inline-block mb-2 text-primary">Notaris</strong>
-          <h3 class="mb-0">Artikel & Informasi</h3>
-          <br>
-          <p class="card-text mb-auto">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
-          <a href="#" class="stretched-link">Continue reading</a>
-        </div>
-        <div class="col-auto d-md-block">
-          <img class="bd-placeholder-img" src="card img/Card 3.jpg" alt="Card Image 1" width="200" height="250">
-        </div>
-      </div>
-    </div>
-    <div class="col-md-6 info" >
-      <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative" >
-        <div class="col p-4 d-flex flex-column position-static" >
-          <strong class="d-inline-block mb-2 text-success">PPAT</strong>
-          <h3 class="mb-0">Artikel & Informasi</h3>
-          <br>
-          <p class="mb-auto">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
-          <a href="#" class="stretched-link">Continue reading</a>
-        </div>
-        <div class="col-auto d-md-block">
-          <img class="bd-placeholder-img" src="card img/Card 2.jpg" alt="Card Image 2" width="200" height="250">
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-<!-- End Card -->
-
   <!-- Welcome -->
-
   <section id="tk">
     <div class="container">
       <div class="row g-5">
@@ -141,20 +105,16 @@
         <article class="blog-post">
           <h2 class="blog-post-title fst-italic">Welcome Reading !</h2>
           <p class="blog-post-meta">November, 02 2022 oleh Admin</a></p>
-
           <p>Website ini kami selenggarakan untuk dapat membantu memberikan informasi praktis secara online mengenai hal-hal yang berhubungan dengan service Notaris dan PPAT (Pejabat Pembuat Akta Tanah) dari kantor kami.</p> 
-
           <blockquote class="blockquote">
             <p>Di sini kami sediakan beberapa tautan yang dapat anda baca, terutama atas hal-hal yang paling sering diperlukan klien dari kantor kami yaitu :</p>
           </blockquote>
-
           <ul>
             <li>Apa saja yang wajib dan/atau disarankan dibuat dalam Akta Notaris dan apa saja yang wajib dan/atau disarankan dibuat dalam Akta PPAT.</li>
             <li>Persyaratan Pendirian: Perseroan Terbatas (PT), Yayasan, Perkumpulan dan CV.</li>
             <li>Persyaratan atas hal-hal yang terkait dengan Pertanahan: Jual Beli, Hibah, Sewa Menyewa, dll</li>
             <li>Beberapa artikel yang bersifat informasi praktis mengenai hukum dan layanan kantor Notaris dan PPAT.</li>
           </ul>
-
           <p>Untuk hal-hal lain yang tidak ditemukan pada tautan dan artikel yang kami sediakan di web site ini, atau ingin menanyakan informasi lebih lanjut, tinggalkan pesan di form yang kami sediakan di menu Hubungi Kami dengan mengisi nama, email dan pesan. Notaris atau Legal Officer kantor kami akan membalas pesan dalam jangka waktu maksimum 2x24 jam hari kerja.</p>
         </article>
       </div>
@@ -164,40 +124,22 @@
 </div>
 </section>
 <!-- End Welcome -->
-<section id="artikel">
-  <div class="container">
-    <h2 class="blog-post-title fst-italic">Artikel & Informasi Tentang Notaris</h2>
-    <div class="row g-3 mb-4 mt-2" data-aos="fade-up" data-duration="2000">
-      <div class="col-md-6">
-        <div class="card">
-          <div class="card-body">
-            <h2 class="blog-post-title fst-italic">Apa itu Notaris ?</h2>
-            <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-            <a href="#" class="btn btn-primary">Baca selanjutnya ></a>
-          </div>
-        </div>
-      </div>
-      <div class="col-md-6">
-        <div class="card">
-          <div class="card-body">
-            <h2 class="blog-post-title fst-italic">Macam-Macam Akta !</h2>
-            <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-            <a href="#" class="btn btn-primary">Baca selanjutnya ></a>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
-
-
-
-<footer class="bd-footer py-5 mt-4" style="background-color: #f2f2fe;">
+<footer class="bd-footer py-3 mt-4" style="background-color: #f2f2fe;">
   <div class="container">
     <div class="row">
-      <div class="col-lg-6 mb-3">
-        <a class="d-inline-flex align-items-center mb-2 link-dark text-decoration-none" href="/" aria-label="Bootstrap">
-          <svg xmlns="http://www.w3.org/2000/svg" width="40" height="32" class="d-block me-2" viewBox="0 0 118 94" role="img"><title>Bootstrap</title><path fill-rule="evenodd" clip-rule="evenodd" d="M24.509 0c-6.733 0-11.715 5.893-11.492 12.284.214 6.14-.064 14.092-2.066 20.577C8.943 39.365 5.547 43.485 0 44.014v5.972c5.547.529 8.943 4.649 10.951 11.153 2.002 6.485 2.28 14.437 2.066 20.577C12.794 88.106 17.776 94 24.51 94H93.5c6.733 0 11.714-5.893 11.491-12.284-.214-6.14.064-14.092 2.066-20.577 2.009-6.504 5.396-10.624 10.943-11.153v-5.972c-5.547-.529-8.934-4.649-10.943-11.153-2.002-6.484-2.28-14.437-2.066-20.577C105.214 5.894 100.233 0 93.5 0H24.508zM80 57.863C80 66.663 73.436 72 62.543 72H44a2 2 0 01-2-2V24a2 2 0 012-2h18.437c9.083 0 15.044 4.92 15.044 12.474 0 5.302-4.01 10.049-9.119 10.88v.277C75.317 46.394 80 51.21 80 57.863zM60.521 28.34H49.948v14.934h8.905c6.884 0 10.68-2.772 10.68-7.727 0-4.643-3.264-7.207-9.012-7.207zM49.948 49.2v16.458H60.91c7.167 0 10.964-2.876 10.964-8.281 0-5.406-3.903-8.178-11.425-8.178H49.948z" fill="currentColor"></path></svg>
+      <div class="col-6 col-lg-3 mb-1">
+        <h5>Links</h5>
+        <ul class="list-unstyled">
+          <li class="mb-2"><a href="index.html">Home</a></li>
+          <li class="mb-2"><a href="#tk">Tentang Kami</a></li>
+          <li class="mb-2"><a href="#">Notaris</a></li>
+          <li class="mb-2"><a href="#">PPAT</a></li>
+          <li class="mb-2"><a href="profil.html">Profil Notaris & PPAT</a></li>
+          <li class="mb-2"><a href="#">Contact</a></li>
+        </ul>
+      </div>
+      <div class="col-lg-6 mb-1">
+        <a class="d-inline-flex align-items-center mb-2 link-dark text-decoration-none" href="#">
           <span class="fs-5">NOTARIS & PPAT <br> Agus Priyantoko, SH., MKn., MH.</span>
         </a>
         <ol class="list-unstyled ">
@@ -233,27 +175,6 @@
           </li>
         </ol>
       </div>
-      <div class="col-6 col-lg-3 mb-3">
-        <h5>Links</h5>
-        <ul class="list-unstyled">
-          <li class="mb-2"><a href="index.html">Home</a></li>
-          <li class="mb-2"><a href="#tk">Tentang Kami</a></li>
-          <li class="mb-2"><a href="#">Notaris</a></li>
-          <li class="mb-2"><a href="#">PPAT</a></li>
-          <li class="mb-2"><a href="profil.html">Profil Notaris & PPAT</a></li>
-          <li class="mb-2"><a href="#">Contact</a></li>
-        </ul>
-      </div>
-      <div class="col-6 col-lg-3 mb-3">
-        <h5>Archives</h5>
-        <ul class="list-unstyled">
-          <li class="mb-2"><a href="">November 2022</a></li>
-          <li class="mb-2"><a href="">Desember 2022</a></li>
-          <li class="mb-2"><a href="">Januari 2023</a></li>
-          <li class="mb-2"><a href="">Februari 2023</a></li>
-          <li class="mb-2"><a href="">Maret 2023</a></li>
-        </ul>
-      </div>
     </div>
   </div>
 </footer>
@@ -264,6 +185,13 @@
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <script>
     AOS.init();
+  </script>
+  <script>
+    var myCarousel = document.querySelector('#myCarousel')
+    var carousel = new bootstrap.Carousel(myCarousel, {
+      interval: 1000,
+      wrap: true
+    })
   </script>
   </body>
 </html>
