--- a/html/index.html
+++ b/html/index.html
@@ -8,9 +8,9 @@
   <title>Notaris & PPAT Agus </title>
   <!-- Bootstrap core CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-  <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="image-slide.css">
-  <link rel="stylesheet" href="nav-style.css">
+  <link rel="stylesheet" href="../Css/style.css">
+  <link rel="stylesheet" href="../Css/profil-style.css">
+  <link rel="stylesheet" href="../Css/nav-style.css">
   <!-- Favicons -->
   <script src="https://kit.fontawesome.com/59443b8a75.js" crossorigin="anonymous"></script>
   <meta name="theme-color" content="#7952b3">
@@ -23,7 +23,7 @@
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 
-<body id="content-page" style="background-color: #fafafa;">
+<body id="content-page">
   <style>
     .bd-placeholder-img {
     font-size: 1.125rem;
@@ -49,20 +49,23 @@
   </div>
 <!-- Navbar -->
     <nav class="nav-one">
-    <input type="checkbox" id="check">
-    <label for="check">
-        <i class="fa fa-bars" id="button"></i>
-        <i class="fa fa-times"id="close"></i>
-    </label>
-    <h5>NOTARIS & PPAT <br> Agus Priyantoko, SH., MKn., MH.</h5>
-    <ul class="list-unstyled">
-      <li><a href="index.html">Home</a></li>
-      <li><a href="#">Tentang Kami</a></li>
-      <li><a href="#">Notaris</a></li>
-      <li><a href="#">PPAT</a></li>
-      <li><a href="profil.html">Profil Notaris & PPAT</a></li>
-      <li><a href="#">Contact</a></li>
-    </ul>
+
+      <input type="checkbox" id="check">
+      <label for="check">
+          <i class="fa fa-bars" id="button"></i>
+          <i class="fa fa-times"id="close"></i>
+          
+      </label>
+      
+      <h5>NOTARIS & PPAT <br> Agus Priyantoko, SH., MKn., MH.</h5>
+      <ul class="list-unstyled">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="#">Tentang Kami</a></li>
+        <li><a href="notaris.html">Notaris</a></li>
+        <li><a href="#">PPAT</a></li>
+        <li><a href="profil.html">Profil Notaris & PPAT</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>      
   </nav>
   
 <!-- End Navbar -->
@@ -77,13 +80,13 @@
       </div>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="img/Card 1.jpg" class="d-block w-100" alt="Foto 1">
+          <img src="../img/Card 1.jpg" class="d-block w-100" alt="Foto 1">
         </div>
         <div class="carousel-item">
-          <img src="img/foto1.jpg" class="d-block w-100" alt="Foto 2">
+          <img src="../img/foto1.jpg" class="d-block w-100" alt="Foto 2">
         </div>
         <div class="carousel-item">
-          <img src="img/foto2.jpg" class="d-block w-100" alt="Foto 3">
+          <img src="../img/foto2.jpg" class="d-block w-100" alt="Foto 3">
         </div>
       </div>
       <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -124,56 +127,56 @@
 </div>
 </section>
 <!-- End Welcome -->
-<footer class="bd-footer py-3 mt-4" style="background-color: #f2f2fe;">
+<footer class="bd-footer py-5 mt-4" style="background-color: #f2f2fe;">
   <div class="container">
     <div class="row">
-      <div class="col-6 col-lg-3 mb-1">
-        <h5>Links</h5>
-        <ul class="list-unstyled">
-          <li class="mb-2"><a href="index.html">Home</a></li>
-          <li class="mb-2"><a href="#tk">Tentang Kami</a></li>
-          <li class="mb-2"><a href="#">Notaris</a></li>
-          <li class="mb-2"><a href="#">PPAT</a></li>
-          <li class="mb-2"><a href="profil.html">Profil Notaris & PPAT</a></li>
-          <li class="mb-2"><a href="#">Contact</a></li>
-        </ul>
-      </div>
-      <div class="col-lg-6 mb-1">
-        <a class="d-inline-flex align-items-center mb-2 link-dark text-decoration-none" href="#">
+      <div class="col-lg-6 mb-3">
+        <a class="d-inline-flex align-items-center mb-2 link-dark text-decoration-none" href="/">
           <span class="fs-5">NOTARIS & PPAT <br> Agus Priyantoko, SH., MKn., MH.</span>
         </a>
-        <ol class="list-unstyled ">
+        <ol class="list-unstyled">
           <li class="mb-2">
-            <a href="#" style="text-decoration: none;">
+            <a href="#" style="text-decoration: none; font-size: 17px;">
               <i class="fa-brands fa-facebook" style="color: #4267B2;"></i>
               <span class="ps-0" style="font-weight: 400; color: #333;">Facebook</span>
             </a>
           </li>
           <li class="mb-2">
-            <a href="#" style="text-decoration: none;">
+            <a href="#" style="text-decoration: none; font-size: 17px;">
               <i class="fa-brands fa-twitter" style="color: #1DA1F2;"></i>
               <span style="font-weight: 400; color: #333;">Twitter</span>
             </a>
           </li>
           <li class="mb-2">
-            <a href="#" style="text-decoration: none;">
+            <a href="#" style="text-decoration: none; font-size: 17px;">
               <i class="fa-brands fa-instagram" style="color: #405DE6;"></i>
               <span style="font-weight: 400; color: #333;">Instagram</span>
             </a>
           </li>
           <li class="mb-2">
-            <a href="#" style="text-decoration: none;">
+            <a href="#" style="text-decoration: none; font-size: 17px;">
               <i class="fa-brands fa-whatsapp" style="color: 	#128C7E;"></i>
               <span style="font-weight: 400; color: #333;">0812-2020-4223</span>
             </a>
           </li>
           <li class="mb-2">
-            <a href="#" style="text-decoration: none;">
+            <a href="#" style="text-decoration: none; font-size: 17px;">
               <i class="fa-solid fa-location-dot" style="color: #dd4b3e;"></i>
               <span style="font-weight: 400; color: #333;">Jl. Gamprit Raya No.41, RT.004/RW.014, Jatiwaringin, Kec. Pd. Gede, Kota Bks, Jawa Barat 17411</span>
             </a>
           </li>
         </ol>
+      </div>
+      <div class="col-6 col-lg-3 mb-3 offset-6 offset-lg-3">
+        <h5>Links</h5>
+        <ul class="list-unstyled">
+          <li class="mb-2"><a href="index.html">Home</a></li>
+          <li class="mb-2"><a href="#">Tentang Kami</a></li>
+          <li class="mb-2"><a href="#">Notaris</a></li>
+          <li class="mb-2"><a href="#">PPAT</a></li>
+          <li class="mb-2"><a href="profil.html">Profil Notaris & PPAT</a></li>
+          <li class="mb-2"><a href="#">Contact</a></li>
+        </ul>
       </div>
     </div>
   </div>
