--- a/html/profil.html
+++ b/html/profil.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kantor Notaris</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="profil-style.css">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="nav-style.css">
+    <link rel="stylesheet" href="../Css/style.css">
+    <link rel="stylesheet" href="../Css/profil-style.css">
+    <link rel="stylesheet" href="../Css/nav-style.css">
 
     <!-- Font Style -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -185,7 +185,7 @@
                 </li>
               </ol>
             </div>
-            <div class="col-6 col-lg-3 mb-3">
+            <div class="col-6 col-lg-3 mb-3 offset-6 offset-lg-3">
               <h5>Links</h5>
               <ul class="list-unstyled">
                 <li class="mb-2"><a href="index.html">Home</a></li>
@@ -194,16 +194,6 @@
                 <li class="mb-2"><a href="#">PPAT</a></li>
                 <li class="mb-2"><a href="profil.html">Profil Notaris & PPAT</a></li>
                 <li class="mb-2"><a href="#">Contact</a></li>
-              </ul>
-            </div>
-            <div class="col-6 col-lg-3 mb-3">
-              <h5>Archives</h5>
-              <ul class="list-unstyled">
-                <li class="mb-2"><a href="">November 2022</a></li>
-                <li class="mb-2"><a href="">Desember 2022</a></li>
-                <li class="mb-2"><a href="">Januari 2023</a></li>
-                <li class="mb-2"><a href="">Februari 2023</a></li>
-                <li class="mb-2"><a href="">Maret 2023</a></li>
               </ul>
             </div>
           </div>
