--- a/profil.html
+++ b/profil.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kantor Notaris</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="../Css/style.css">
-    <link rel="stylesheet" href="../Css/profil-style.css">
-    <link rel="stylesheet" href="../Css/nav-style.css">
+    <link rel="stylesheet" href="/Css/style.css">
+    <link rel="stylesheet" href="/Css/profil-style.css">
+    <link rel="stylesheet" href="/Css/nav-style.css">
 
     <!-- Font Style -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
