--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
   <title>Notaris & PPAT Agus </title>
   <!-- Bootstrap core CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-  <link rel="stylesheet" href="/Css/style.css">
-  <link rel="stylesheet" href="/Css/profil-style.css">
-  <link rel="stylesheet" href="/Css/nav-style.css">
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="profil-style.css">
+  <link rel="stylesheet" href="nav-style.css">
   <!-- Favicons -->
   <script src="https://kit.fontawesome.com/59443b8a75.js" crossorigin="anonymous"></script>
   <meta name="theme-color" content="#7952b3">
@@ -80,13 +80,13 @@
       </div>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="../img/Card 1.jpg" class="d-block w-100" alt="Foto 1">
+          <img src="img/Card 1.jpg" class="d-block w-100" alt="Foto 1">
         </div>
         <div class="carousel-item">
-          <img src="../img/foto1.jpg" class="d-block w-100" alt="Foto 2">
+          <img src="img/foto1.jpg" class="d-block w-100" alt="Foto 2">
         </div>
         <div class="carousel-item">
-          <img src="../img/foto2.jpg" class="d-block w-100" alt="Foto 3">
+          <img src="img/foto2.jpg" class="d-block w-100" alt="Foto 3">
         </div>
       </div>
       <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
