--- a/notaris.html
+++ b/notaris.html
@@ -7,9 +7,9 @@
     <title>Document</title>
     <!-- Bootstrap core CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-    <link rel="stylesheet" href="/Css/style.css">
-    <link rel="stylesheet" href="/Css/profil-style.css">
-    <link rel="stylesheet" href="/Css/nav-style.css">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="profil-style.css">
+    <link rel="stylesheet" href="nav-style.css">
     <!-- Favicons -->
     <script src="https://kit.fontawesome.com/59443b8a75.js" crossorigin="anonymous"></script>
     <meta name="theme-color" content="#7952b3">
