--- a/profil.html
+++ b/profil.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kantor Notaris</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="/Css/style.css">
-    <link rel="stylesheet" href="/Css/profil-style.css">
-    <link rel="stylesheet" href="/Css/nav-style.css">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="profil-style.css">
+    <link rel="stylesheet" href="nav-style.css">
 
     <!-- Font Style -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -64,7 +64,7 @@
     <div class="container mt-2">
         <div class="row">
             <div class="jumbotron text-center">
-                <img src="/profil-image/foto1.jfif" class="img1">
+                <img src="profil-image/foto1.jfif" class="img1">
                 <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid consequatur in dicta maiores consequuntur voluptate sint aliquam, minus unde ipsa veniam voluptatem similique nostrum delectus molestiae totam quaerat, nam quibusdam.</p>
               </div>
         </div>
