--- a/profil.html
+++ b/profil.html
@@ -190,7 +190,7 @@
               <ul class="list-unstyled">
                 <li class="mb-2"><a href="index.html">Home</a></li>
                 <li class="mb-2"><a href="#">Tentang Kami</a></li>
-                <li class="mb-2"><a href="#">Notaris</a></li>
+                <li class="mb-2"><a href="notaris.html">Notaris</a></li>
                 <li class="mb-2"><a href="#">PPAT</a></li>
                 <li class="mb-2"><a href="profil.html">Profil Notaris & PPAT</a></li>
                 <li class="mb-2"><a href="#">Contact</a></li>
