--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       <h5>NOTARIS & PPAT <br> Agus Priyantoko, SH., MKn., MH.</h5>
       <ul class="list-unstyled">
         <li><a href="index.html">Home</a></li>
-        <li><a href="#">Tentang Kami</a></li>
+        <li><a href="tentang-kami.html">Tentang Kami</a></li>
         <li><a href="notaris.html">Notaris</a></li>
         <li><a href="#">PPAT</a></li>
         <li><a href="profil.html">Profil Notaris & PPAT</a></li>
@@ -101,10 +101,10 @@
   </div>
 <!-- End Image Slider -->
   <!-- Welcome -->
-  <section id="tk">
+  <section id="tentang">
     <div class="container">
       <div class="row g-5">
-      <div class="col-md-12">
+      <div class="col-md-7 col-lg-8">
         <article class="blog-post">
           <h2 class="blog-post-title fst-italic">Welcome Reading !</h2>
           <p class="blog-post-meta">November, 02 2022 oleh Admin</a></p>
@@ -121,6 +121,48 @@
           <p>Untuk hal-hal lain yang tidak ditemukan pada tautan dan artikel yang kami sediakan di web site ini, atau ingin menanyakan informasi lebih lanjut, tinggalkan pesan di form yang kami sediakan di menu Hubungi Kami dengan mengisi nama, email dan pesan. Notaris atau Legal Officer kantor kami akan membalas pesan dalam jangka waktu maksimum 2x24 jam hari kerja.</p>
         </article>
       </div>
+          <div class="col-md-5 col-lg-4">
+            <table class="table">
+              <thead class="text-center fs-2">
+                  <tr>
+                    <th class="col-6 text-start">Jadwal</th>
+                    <th class="col-6 text-end text-success" style="padding-bottom: 13px;"><svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="currentColor" class="bi bi-clock-fill" viewBox="0 0 16 16">
+                      <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM8 3.5a.5.5 0 0 0-1 0V9a.5.5 0 0 0 .252.434l3.5 2a.5.5 0 0 0 .496-.868L8 8.71V3.5z"/>
+                    </svg></th>
+                  </tr>
+              </thead>
+              <tbody >
+                <tr>
+                  <td>Senin</td>
+                  <td class="text-end">8.00 am - 4.30 pm</td>
+                </tr>
+                <tr>
+                  <td>Selasa</td>
+                  <td class="text-end">8.00 am - 4.30 pm</td>
+                </tr>
+                <tr>
+                  <td>Rabu</td>
+                  <td class="text-end">8.00 am - 4.30 pm</td>
+                </tr>
+                <tr>
+                  <td>Kamis</td>
+                  <td class="text-end">8.00 am - 4.30 pm</td>
+                </tr>
+                <tr>
+                  <td>Jumat</td>
+                  <td class="text-end">8.00 am - 4.30 pm</td>
+                </tr>
+                <tr>
+                  <td>Sabtu</td>
+                  <td class="text-end">8.00 am - 4.30 pm</td>
+                </tr>
+                <tr>
+                  <td>Minggu</td>
+                  <td class="text-end">Tutup</td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
       </div>
     </div>
   </div>
@@ -167,7 +209,7 @@
           </li>
         </ol>
       </div>
-      <div class="col-6 col-lg-3 mb-3 offset-6 offset-lg-3">
+      <div class="col-6 col-lg-3 mb-3">
         <h5>Links</h5>
         <ul class="list-unstyled">
           <li class="mb-2"><a href="index.html">Home</a></li>
