--- a/ppat.html
+++ b/ppat.html
@@ -35,11 +35,11 @@
         <h5>NOTARIS & PPAT <br> Agus Priyantoko, SH., MKn., MH.</h5>
         <ul class="list-unstyled">
           <li><a href="index.html">Home</a></li>
-          <li><a href="#">Tentang Kami</a></li>
-          <li><a href="#">Notaris</a></li>
-          <li><a href="#">PPAT</a></li>
+          <li><a href="tentang-kami.html">Tentang Kami</a></li>
+          <li><a href="notaris.html">Notaris</a></li>
+          <li><a href="ppat.html">PPAT</a></li>
           <li><a href="profil.html">Profil Notaris & PPAT</a></li>
-          <li><a href="#">Contact</a></li>
+          <li><a href="contact.html">Contact</a></li>
         </ul>      
     </nav>
   <!-- End Navbar -->
@@ -99,11 +99,11 @@
           <h5>Links</h5>
           <ul class="list-unstyled">
             <li class="mb-2"><a href="index.html">Home</a></li>
-            <li class="mb-2"><a href="#">Tentang Kami</a></li>
+            <li class="mb-2"><a href="tentang-kami.html">Tentang Kami</a></li>
             <li class="mb-2"><a href="notaris.html">Notaris</a></li>
-            <li class="mb-2"><a href="#">PPAT</a></li>
+            <li class="mb-2"><a href="ppat.html">PPAT</a></li>
             <li class="mb-2"><a href="profil.html">Profil Notaris & PPAT</a></li>
-            <li class="mb-2"><a href="#">Contact</a></li>
+            <li class="mb-2"><a href="contact.html">Contact</a></li>
           </ul>
         </div>
       </div>
