--- a/profil.html
+++ b/profil.html
@@ -37,32 +37,28 @@
       <h5>NOTARIS & PPAT <br> Agus Priyantoko, SH., MKn., MH.</h5>
       <ul class="list-unstyled">
         <li><a href="index.html">Home</a></li>
-        <li><a href="#">Tentang Kami</a></li>
-        <li><a href="#">Notaris</a></li>
-        <li><a href="#">PPAT</a></li>
+        <li><a href="tentang-kami.html">Tentang Kami</a></li>
+        <li><a href="notaris.html">Notaris</a></li>
+        <li><a href="ppat.html">PPAT</a></li>
         <li><a href="profil.html">Profil Notaris & PPAT</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
     <!-- End Navbar -->
 
-    <div class="container-fluid bg-dark">
-        <div class="container ">
-            <div class="row">
-                <div class="col d-flex mt-3 text-white">
-                    <H5 style="font-size : 20px;">PROFIL NOTARIS & PPAT</H5>
-                    <ol class="breadcrumb ms-auto mt-1">
-                        <li class="breadcrumb-item"><a href="#"><i class="fa-solid fa-house"></i></a></li>
-                        <li class="breadcrumb-item active text-white" aria-current="page">PROFIL NOTARIS & PPAT</li>
-                    </ol>
-                </div>
-            </div>
-        </div>
+    <div class="container p-4">
+      <div class="col">
+        <ol class="breadcrumb ms-auto mt-1">
+            <li class="breadcrumb-item"><a href="#"><i class="fa-solid fa-house"></i></a></li>
+            <li class="breadcrumb-item active" aria-current="page">PROFIL NOTARIS & PPAT</li>
+        </ol>
+       </div>
     </div>
 
     <!-- Jumbotron -->
     <div class="container mt-2">
         <div class="row">
+          
             <div class="jumbotron text-center">
                 <img src="profil-image/foto1.jfif" class="img1">
                 <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid consequatur in dicta maiores consequuntur voluptate sint aliquam, minus unde ipsa veniam voluptatem similique nostrum delectus molestiae totam quaerat, nam quibusdam.</p>
@@ -185,15 +181,15 @@
                 </li>
               </ol>
             </div>
-            <div class="col-6 col-lg-3 mb-3 offset-6 offset-lg-3">
+            <div class="col-6 col-lg-3 mb-3">
               <h5>Links</h5>
               <ul class="list-unstyled">
                 <li class="mb-2"><a href="index.html">Home</a></li>
-                <li class="mb-2"><a href="#">Tentang Kami</a></li>
+                <li class="mb-2"><a href="tentang-kami.html">Tentang Kami</a></li>
                 <li class="mb-2"><a href="notaris.html">Notaris</a></li>
-                <li class="mb-2"><a href="#">PPAT</a></li>
+                <li class="mb-2"><a href="ppat.html">PPAT</a></li>
                 <li class="mb-2"><a href="profil.html">Profil Notaris & PPAT</a></li>
-                <li class="mb-2"><a href="#">Contact</a></li>
+                <li class="mb-2"><a href="contact.html">Contact</a></li>
               </ul>
             </div>
           </div>
