--- a/tentang-kami.html
+++ b/tentang-kami.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Kantor Notaris | Agus Priyantoko</title>
     <!-- Bootstrap core CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
@@ -24,38 +24,58 @@
 <body>
     <!-- Navbar -->
     <nav class="nav-one">
-
         <input type="checkbox" id="check">
         <label for="check">
             <i class="fa fa-bars" id="button"></i>
-            <i class="fa fa-times"id="close"></i>
-            
-        </label>
-        
+            <i class="fa fa-times"id="close"></i> 
+        </label>       
         <h5>NOTARIS & PPAT <br> Agus Priyantoko, SH., MKn., MH.</h5>
         <ul class="list-unstyled">
           <li><a href="index.html">Home</a></li>
-          <li><a href="#">Tentang Kami</a></li>
-          <li><a href="#">Notaris</a></li>
-          <li><a href="#">PPAT</a></li>
+          <li><a href="tentang-kami.html">Tentang Kami</a></li>
+          <li><a href="notaris.html">Notaris</a></li>
+          <li><a href="ppat.html">PPAT</a></li>
           <li><a href="profil.html">Profil Notaris & PPAT</a></li>
-          <li><a href="#">Contact</a></li>
+          <li><a href="contact.html">Contact</a></li>
         </ul>      
     </nav>
   <!-- End Navbar -->
 
-  <!-- Content -->
-  <div class="container p-4">
-    <div class="col">
-      <ol class="breadcrumb ms-auto mt-1">
-          <li class="breadcrumb-item"><a href="#"><i class="fa-solid fa-house"></i></a></li>
-          <li class="breadcrumb-item active" aria-current="page">NOTARIS</li>
-      </ol>
-     </div>
-  </div>
+    <!-- Content -->
+        <div class="container p-4">
+           <div class="col">
+            <ol class="breadcrumb ms-auto mt-1">
+                <li class="breadcrumb-item"><a href="#"><i class="fa-solid fa-house"></i></a></li>
+                <li class="breadcrumb-item active" aria-current="page">TENTANG KAMI</li>
+            </ol>
+           </div>
+          <div class="row g-5">
+            <div class="col text-center">
+                <h5>NOTARIS & PPAT <br> Agus Priyantoko, SH., MKn., MH.</h5>
+            </div>
+          <div class="col-md-12">
+            <article class="blog-post">
+                <p>Website ini kami selenggarakan untuk dapat membantu memberikan informasi praktis secara online mengenai hal-hal yang berhubungan dengan service Notaris dan PPAT (Pejabat Pembuat Akta Tanah) dari kantor kami.</p> 
+                <blockquote class="blockquote">
+                    <p>Di sini kami sediakan beberapa tautan yang dapat anda baca, terutama atas hal-hal yang paling sering diperlukan klien dari kantor kami yaitu :</p>
+                </blockquote>
+                <ul>
+                    <li>Apa saja yang wajib dan/atau disarankan dibuat dalam Akta Notaris dan apa saja yang wajib dan/atau disarankan dibuat dalam Akta PPAT.</li>
+                    <li>Persyaratan Pendirian: Perseroan Terbatas (PT), Yayasan, Perkumpulan dan CV.</li>
+                    <li>Persyaratan atas hal-hal yang terkait dengan Pertanahan: Jual Beli, Hibah, Sewa Menyewa, dll</li>
+                    <li>Beberapa artikel yang bersifat informasi praktis mengenai hukum dan layanan kantor Notaris dan PPAT.</li>
+                </ul>
+                <p>Untuk hal-hal lain yang tidak ditemukan pada tautan dan artikel yang kami sediakan di web site ini, atau ingin menanyakan informasi lebih lanjut, tinggalkan pesan di form yang kami sediakan di menu Hubungi Kami dengan mengisi nama, email dan pesan. Notaris atau Legal Officer kantor kami akan membalas pesan dalam jangka waktu maksimum 2x24 jam hari kerja.</p>
+            </article>
+          </div>
+          </div>
+        </div>
+      </div>
+    </div>
+<!-- End Content-->
 
   <!-- Footer -->
-  <footer class="bd-footer py-5 mt-4 fixed-bottom" style="background-color: #f2f2fe;">
+  <footer class="bd-footer py-5 mt-4" style="background-color: #f2f2fe;">
     <div class="container">
       <div class="row">
         <div class="col-lg-6 mb-3">
@@ -99,7 +119,7 @@
           <h5>Links</h5>
           <ul class="list-unstyled">
             <li class="mb-2"><a href="index.html">Home</a></li>
-            <li class="mb-2"><a href="#">Tentang Kami</a></li>
+            <li class="mb-2"><a href="tentang-kami.html">Tentang Kami</a></li>
             <li class="mb-2"><a href="notaris.html">Notaris</a></li>
             <li class="mb-2"><a href="#">PPAT</a></li>
             <li class="mb-2"><a href="profil.html">Profil Notaris & PPAT</a></li>
