--- a/index.html
+++ b/index.html
@@ -24,8 +24,9 @@
 </head>
 
 <body id="content-page">
+  <!-- Icon -->
   <div class="container-fluid fixed-bottom container-icon">
-    <div class="col-icon float-end">
+    <div class="col-icon float-end mb-3">
       <a href="" class="icon up" data-aos="fade-left"
       data-aos-easing="linear"
       data-aos-duration="1000">
@@ -188,43 +189,33 @@
 </section>
 
 <!-- End Welcome -->
-<footer class="bd-footer py-5 mt-4" style="background-color: #f2f2fe;">
+<footer class="bd-footer py-5 mt-4">
   <div class="container">
     <div class="row">
       <div class="col-lg-6 mb-3">
-        <a class="d-inline-flex align-items-center mb-2 link-dark text-decoration-none" href="/">
+        <a class="d-inline-flex align-items-center mb-2 link-dark text-decoration-none" href="#content-page">
           <span class="fs-5">NOTARIS & PPAT <br> Agus Priyantoko, SH., MKn., MH.</span>
         </a>
         <ol class="list-unstyled">
-          <li class="mb-2">
-            <a href="#" style="text-decoration: none; font-size: 17px;">
+          <li class="mb-2" style="font-size: 17px;">
               <i class="fa-brands fa-facebook" style="color: #4267B2;"></i>
               <span class="ps-0" style="font-weight: 400; color: #333;">Facebook</span>
-            </a>
           </li>
-          <li class="mb-2">
-            <a href="#" style="text-decoration: none; font-size: 17px;">
+          <li class="mb-2" style="font-size: 17px;">
               <i class="fa-brands fa-twitter" style="color: #1DA1F2;"></i>
               <span style="font-weight: 400; color: #333;">Twitter</span>
-            </a>
           </li>
-          <li class="mb-2">
-            <a href="#" style="text-decoration: none; font-size: 17px;">
+          <li class="mb-2" style="font-size: 17px;">
               <i class="fa-brands fa-instagram" style="color: #405DE6;"></i>
               <span style="font-weight: 400; color: #333;">Instagram</span>
-            </a>
           </li>
-          <li class="mb-2">
-            <a href="#" style="text-decoration: none; font-size: 17px;">
+          <li class="mb-2" style="font-size: 17px;">
               <i class="fa-brands fa-whatsapp" style="color: 	#128C7E;"></i>
               <span style="font-weight: 400; color: #333;">0812-2020-4223</span>
-            </a>
           </li>
-          <li class="mb-2">
-            <a href="#" style="text-decoration: none; font-size: 17px;">
+          <li class="mb-2" style="font-size: 17px;">
               <i class="fa-solid fa-location-dot" style="color: #dd4b3e;"></i>
               <span style="font-weight: 400; color: #333;">Jl. Gamprit Raya No.41, RT.004/RW.014, Jatiwaringin, Kec. Pd. Gede, Kota Bks, Jawa Barat 17411</span>
-            </a>
           </li>
         </ol>
       </div>
@@ -232,11 +223,11 @@
         <h5>Links</h5>
         <ul class="list-unstyled">
           <li class="mb-2"><a href="index.html">Home</a></li>
-          <li class="mb-2"><a href="#">Tentang Kami</a></li>
+          <li class="mb-2"><a href="tentang-kami.html">Tentang Kami</a></li>
           <li class="mb-2"><a href="notaris.html">Notaris</a></li>
-          <li class="mb-2"><a href="#">PPAT</a></li>
+          <li class="mb-2"><a href="ppat.html">PPAT</a></li>
           <li class="mb-2"><a href="profil.html">Profil Notaris & PPAT</a></li>
-          <li class="mb-2"><a href="#">Contact</a></li>
+          <li class="mb-2"><a href="contact.html">Contact</a></li>
         </ul>
       </div>
     </div>
