--- a/notaris.html
+++ b/notaris.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>NOTARIS & PPAT Agus Priyantoko, SH., MKn., MH.</title>
     <!-- Bootstrap core CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
@@ -24,7 +24,7 @@
 <body id="content-page">
   <div class="container-fluid fixed-bottom container-icon">
     <div class="col-icon float-end">
-      <a href="" class="icon up" data-aos="fade-left"
+      <a href="" class="icon" data-aos="fade-left"
       data-aos-easing="linear"
       data-aos-duration="1000">
         <svg  xmlns="http://www.w3.org/2000/svg" width="38" height="38" fill="currentColor" class="bi bi-info-circle-fill" viewBox="0 0 16 16">
