--- a/ppat.html
+++ b/ppat.html
@@ -23,7 +23,7 @@
 </head>
 <body id="content-page">
   <div class="container-fluid fixed-bottom container-icon">
-    <div class="col-icon float-end">
+    <div class="col-icon float-end mb-3">
       <a href="" class="icon up" data-aos="fade-left"
       data-aos-easing="linear"
       data-aos-duration="1000">
