--- a/profil.html
+++ b/profil.html
@@ -22,8 +22,8 @@
 </head>
 <body id="content-page">
   <div class="container-fluid fixed-bottom container-icon">
-    <div class="col-icon float-end">
-      <a href="" class="icon up" data-aos="fade-left"
+    <div class="col-icon float-end mb-3">
+      <a href="" class="icon" data-aos="fade-left"
       data-aos-easing="linear"
       data-aos-duration="1000">
         <svg  xmlns="http://www.w3.org/2000/svg" width="38" height="38" fill="currentColor" class="bi bi-info-circle-fill" viewBox="0 0 16 16">
@@ -74,7 +74,6 @@
     <!-- Jumbotron -->
     <div class="container mt-2">
         <div class="row">
-          
             <div class="jumbotron text-center">
                 <img src="profil-image/foto1.jfif" class="img1">
                 <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid consequatur in dicta maiores consequuntur voluptate sint aliquam, minus unde ipsa veniam voluptatem similique nostrum delectus molestiae totam quaerat, nam quibusdam.</p>
@@ -157,7 +156,7 @@
     </div>
     
     <!-- Footer -->
-    <footer class="bd-footer py-5 mt-4" style="background-color: #f2f2fe;">
+    <footer class="bd-footer py-5 mt-4">
         <div class="container">
           <div class="row">
             <div class="col-lg-6 mb-3">
@@ -224,5 +223,8 @@
     <!-- Javascript -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
+    <script>
+      AOS.init();
+    </script>
 </body>
 </html>
