--- a/tentang-kami.html
+++ b/tentang-kami.html
@@ -23,8 +23,8 @@
 </head>
 <body id="content-page">
   <div class="container-fluid fixed-bottom container-icon">
-    <div class="col-icon float-end">
-      <a href="" class="icon up" data-aos="fade-left"
+    <div class="col-icon float-end mb-3">
+      <a href="" class="icon" data-aos="fade-left"
       data-aos-easing="linear"
       data-aos-duration="1000">
         <svg  xmlns="http://www.w3.org/2000/svg" width="38" height="38" fill="currentColor" class="bi bi-info-circle-fill" viewBox="0 0 16 16">
