--- a/artikel1.html
+++ b/artikel1.html
@@ -22,13 +22,24 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 <body>
-  <!-- Icon -->
-  <div class="container-fluid fixed-bottom container-icon" >
-    <a href="#content-page" class="icon float-end" data-aos="fade-up"
-    data-aos-easing="linear"
-    data-aos-duration="500">
-      <i class="fa-solid fa-circle-up m-3"></i>
-    </a>
+
+  <div class="container-fluid fixed-bottom container-icon">
+    <div class="col-icon float-end mb-3">
+      <a href="artikel1.html" class="icon up" data-aos="fade-left"
+      data-aos-easing="linear"
+      data-aos-duration="1000">
+        <svg  xmlns="http://www.w3.org/2000/svg" width="38" height="38" fill="currentColor" class="bi bi-info-circle-fill" viewBox="0 0 16 16">
+          <path d="M8 16A8 8 0 1 0 8 0a8 8 0 0 0 0 16zm.93-9.412-1 4.705c-.07.34.029.533.304.533.194 0 .487-.07.686-.246l-.088.416c-.287.346-.92.598-1.465.598-.703 0-1.002-.422-.808-1.319l.738-3.468c.064-.293.006-.399-.287-.47l-.451-.081.082-.381 2.29-.287zM8 5.5a1 1 0 1 1 0-2 1 1 0 0 1 0 2z"/>
+        </svg>
+      </a>
+        <a href="#content-page" class="icon" data-aos="fade-left"
+        data-aos-easing="linear"
+        data-aos-duration="1000">
+        <svg xmlns="http://www.w3.org/2000/svg" width="38" height="38" fill="currentColor" class="bi bi-arrow-up-circle-fill" viewBox="0 0 16 16">
+          <path d="M16 8A8 8 0 1 0 0 8a8 8 0 0 0 16 0zm-7.5 3.5a.5.5 0 0 1-1 0V5.707L5.354 7.854a.5.5 0 1 1-.708-.708l3-3a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1-.708.708L8.5 5.707V11.5z"/>
+        </svg>
+        </a>
+    </div>
   </div>
     <!-- Navbar -->
     <nav class="nav-one">
@@ -53,15 +64,8 @@
   <!-- End Navbar -->
 
   <!-- Content -->
-  <!-- Icon -->
-  <div class="container-fluid fixed-bottom container-icon" >
-    
-    <a href="#content-page" class="icon float-end" data-aos="fade-up"
-    data-aos-easing="linear"
-    data-aos-duration="500">
-      <i class="fa-solid fa-circle-up m-3"></i>
-    </a>
-  </div>
+
+
 
   <!-- Footer -->
   <footer class="bd-footer py-5 mt-4" style="background-color: #f2f2fe;">
