--- a/index.html
+++ b/index.html
@@ -26,25 +26,24 @@
 <body id="content-page">
   <!-- Icon -->
   <div class="container-fluid fixed-bottom container-icon">
-    <div class="col-icon float-end mb-3">
-      <a href="" class="icon up" data-aos="fade-left"
-      data-aos-easing="linear"
-      data-aos-duration="1000">
-        <svg  xmlns="http://www.w3.org/2000/svg" width="38" height="38" fill="currentColor" class="bi bi-info-circle-fill" viewBox="0 0 16 16">
-          <path d="M8 16A8 8 0 1 0 8 0a8 8 0 0 0 0 16zm.93-9.412-1 4.705c-.07.34.029.533.304.533.194 0 .487-.07.686-.246l-.088.416c-.287.346-.92.598-1.465.598-.703 0-1.002-.422-.808-1.319l.738-3.468c.064-.293.006-.399-.287-.47l-.451-.081.082-.381 2.29-.287zM8 5.5a1 1 0 1 1 0-2 1 1 0 0 1 0 2z"/>
-        </svg>
-      </a>
-        <a href="#content-page" class="icon" data-aos="fade-left"
+      <div class="col-icon float-end mb-3">
+        <a href="artikel1.html" class="icon up" data-aos="fade-left"
         data-aos-easing="linear"
         data-aos-duration="1000">
-        <svg xmlns="http://www.w3.org/2000/svg" width="38" height="38" fill="currentColor" class="bi bi-arrow-up-circle-fill" viewBox="0 0 16 16">
-          <path d="M16 8A8 8 0 1 0 0 8a8 8 0 0 0 16 0zm-7.5 3.5a.5.5 0 0 1-1 0V5.707L5.354 7.854a.5.5 0 1 1-.708-.708l3-3a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1-.708.708L8.5 5.707V11.5z"/>
-        </svg>
+          <svg  xmlns="http://www.w3.org/2000/svg" width="38" height="38" fill="currentColor" class="bi bi-info-circle-fill" viewBox="0 0 16 16">
+            <path d="M8 16A8 8 0 1 0 8 0a8 8 0 0 0 0 16zm.93-9.412-1 4.705c-.07.34.029.533.304.533.194 0 .487-.07.686-.246l-.088.416c-.287.346-.92.598-1.465.598-.703 0-1.002-.422-.808-1.319l.738-3.468c.064-.293.006-.399-.287-.47l-.451-.081.082-.381 2.29-.287zM8 5.5a1 1 0 1 1 0-2 1 1 0 0 1 0 2z"/>
+          </svg>
         </a>
+          <a href="#content-page" class="icon" data-aos="fade-left"
+          data-aos-easing="linear"
+          data-aos-duration="1000">
+          <svg xmlns="http://www.w3.org/2000/svg" width="38" height="38" fill="currentColor" class="bi bi-arrow-up-circle-fill" viewBox="0 0 16 16">
+            <path d="M16 8A8 8 0 1 0 0 8a8 8 0 0 0 16 0zm-7.5 3.5a.5.5 0 0 1-1 0V5.707L5.354 7.854a.5.5 0 1 1-.708-.708l3-3a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1-.708.708L8.5 5.707V11.5z"/>
+          </svg>
+          </a>
+      </div>
     </div>
-  </div>
-        
-  </div>
+
 <!-- Navbar -->
     <nav class="nav-one">
       <input type="checkbox" id="check">
@@ -59,9 +58,9 @@
         <li><a href="index.html">Home</a></li>
         <li><a href="tentang-kami.html">Tentang Kami</a></li>
         <li><a href="notaris.html">Notaris</a></li>
-        <li><a href="#">PPAT</a></li>
+        <li><a href="ppat.html">PPAT</a></li>
         <li><a href="profil.html">Profil Notaris & PPAT</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="contact.html">Contact</a></li>
       </ul>      
   </nav>
   
@@ -175,12 +174,15 @@
         <header class="m-3">
           <h2 class="text-center"><strong><i>Artikel & Informasi</i></strong></h2>
         </header>
-        <div class="card bg-dark text-white">
+        <div class="card text-white">
           <img src="Card img/Card 3.jpg" class="card-img" alt="..." height="385">
           <div class="card-img-overlay">
             <h5 class="card-title">Sejarah Notaris</h5>
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-            <p class="card-text">Last updated 3 mins ago</p>
+            <p class="card-text">Sekitar abad ke 5, notaris dianggap sebagai pejabat istana. Di Italia utara sebagai daerah perdagangan utama pada abad ke 11 – 12, dikenal Latijnse Notariat, yaitu orang yang diangkat oleh penguasa umum, dengan tujuan melayani kepentingan masyarakat umum, dan boleh mendapatkan honorarium atas jasanya oleh masyarakat umum.</p>
+            <a href="link" class="link">
+              <p class="card-text">Baca selanjutnya ></p>
+            </a>
+            
           </div>
         </div>
       </div>
@@ -219,8 +221,8 @@
           </li>
         </ol>
       </div>
-      <div class="col-6 col-lg-3 mb-3">
-        <h5>Links</h5>
+      <div class="col-lg-3 mb-3 links">
+        <h5>Navigation</h5>
         <ul class="list-unstyled">
           <li class="mb-2"><a href="index.html">Home</a></li>
           <li class="mb-2"><a href="tentang-kami.html">Tentang Kami</a></li>
