--- a/ppat.html
+++ b/ppat.html
@@ -24,7 +24,7 @@
 <body id="content-page">
   <div class="container-fluid fixed-bottom container-icon">
     <div class="col-icon float-end mb-3">
-      <a href="" class="icon up" data-aos="fade-left"
+      <a href="artikel1.html" class="icon up" data-aos="fade-left"
       data-aos-easing="linear"
       data-aos-duration="1000">
         <svg  xmlns="http://www.w3.org/2000/svg" width="38" height="38" fill="currentColor" class="bi bi-info-circle-fill" viewBox="0 0 16 16">
