--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
         </ol>
       </div>
       <div class="col-lg-3 mb-3 links">
-        <h5>Navigation</h5>
+        <h5 class="tes">Navigation</h5>
         <ul class="list-unstyled">
           <li class="mb-2"><a href="index.html">Home</a></li>
           <li class="mb-2"><a href="tentang-kami.html">Tentang Kami</a></li>
@@ -245,6 +245,9 @@
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <script>
     AOS.init();
+  </script>
+  <script>
+  alert('Welcome Reading !');
   </script>
   <script>
     var myCarousel = document.querySelector('#carouselExampleIndicators')
