--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <path d="M8 16A8 8 0 1 0 8 0a8 8 0 0 0 0 16zm.93-9.412-1 4.705c-.07.34.029.533.304.533.194 0 .487-.07.686-.246l-.088.416c-.287.346-.92.598-1.465.598-.703 0-1.002-.422-.808-1.319l.738-3.468c.064-.293.006-.399-.287-.47l-.451-.081.082-.381 2.29-.287zM8 5.5a1 1 0 1 1 0-2 1 1 0 0 1 0 2z"/>
           </svg>
         </a>
-          <a href="#content-page" class="icon" data-aos="fade-left"
+          <a href="#content-page" class="icon up" data-aos="fade-left"
           data-aos-easing="linear"
           data-aos-duration="1000">
           <svg xmlns="http://www.w3.org/2000/svg" width="38" height="38" fill="currentColor" class="bi bi-arrow-up-circle-fill" viewBox="0 0 16 16">
@@ -194,38 +194,20 @@
 </section>
 
 <!-- End Welcome -->
-<footer class="bd-footer py-5 mt-4">
-  <div class="container">
+<footer class="bd-footer py-5 mt-4" style="background-color: #f2f2fe;">
+  <div class="container ">
     <div class="row">
-      <div class="col-lg-6 mb-3">
-        <a class="d-inline-flex align-items-center mb-2 link-dark text-decoration-none" href="#content-page">
-          <span class="fs-5">NOTARIS & PPAT <br> Agus Priyantoko, SH., MKn., MH.</span>
-        </a>
-        <ol class="list-unstyled">
-          <li class="mb-2" style="font-size: 17px;">
-              <i class="fa-brands fa-facebook" style="color: #4267B2;"></i>
-              <span class="ps-0" style="font-weight: 400; color: #333;">Facebook</span>
-          </li>
-          <li class="mb-2" style="font-size: 17px;">
-              <i class="fa-brands fa-twitter" style="color: #1DA1F2;"></i>
-              <span style="font-weight: 400; color: #333;">Twitter</span>
-          </li>
-          <li class="mb-2" style="font-size: 17px;">
-              <i class="fa-brands fa-instagram" style="color: #405DE6;"></i>
-              <span style="font-weight: 400; color: #333;">Instagram</span>
-          </li>
-          <li class="mb-2" style="font-size: 17px;">
-              <i class="fa-brands fa-whatsapp" style="color: 	#128C7E;"></i>
-              <span style="font-weight: 400; color: #333;">0812-2020-4223</span>
-          </li>
-          <li class="mb-2" style="font-size: 17px;">
-              <i class="fa-solid fa-location-dot" style="color: #dd4b3e;"></i>
-              <span style="font-weight: 400; color: #333;">Jl. Gamprit Raya No.41, RT.004/RW.014, Jatiwaringin, Kec. Pd. Gede, Kota Bks, Jawa Barat 17411</span>
-          </li>
-        </ol>
+      <div class="col-lg-4 col-md-6 mb-2">
+          <ul class="list-unstyled">
+            <li class="mb-2"><a href="index.html">Home</a></li>
+            <li class="mb-2"><a href="tentang-kami.html">Tentang Kami</a></li>
+            <li class="mb-2"><a href="notaris.html">Notaris</a></li>
+            <li class="mb-2"><a href="ppat.html">PPAT</a></li>
+            <li class="mb-2"><a href="profil.html">Profil Notaris & PPAT</a></li>
+            <li class="mb-2"><a href="contact.html">Contact</a></li>
+          </ul>        
       </div>
-      <div class="col-lg-3 mb-3 links">
-        <h5 class="tes">Navigation</h5>
+      <div class="col-lg-4 col-md-6 mb-2">
         <ul class="list-unstyled">
           <li class="mb-2"><a href="index.html">Home</a></li>
           <li class="mb-2"><a href="tentang-kami.html">Tentang Kami</a></li>
@@ -233,7 +215,44 @@
           <li class="mb-2"><a href="ppat.html">PPAT</a></li>
           <li class="mb-2"><a href="profil.html">Profil Notaris & PPAT</a></li>
           <li class="mb-2"><a href="contact.html">Contact</a></li>
-        </ul>
+        </ul>        
+    </div>
+      <div class="col-lg-4 col-md-12 mb-2">
+        <a class="d-inline-flex align-items-center mb-2 link-dark text-decoration-none" href="/">
+          <span class="fs-5">NOTARIS & PPAT <br> Agus Priyantoko, SH., MKn., MH.</span>
+        </a>
+        <ol class="list-unstyled">
+          <li class="mb-2">
+            <a href="#" style="text-decoration: none; font-size: 17px;">
+              <i class="fa-brands fa-facebook" style="color: #4267B2;"></i>
+              <span class="ps-0" style="font-weight: 400; color: #333;">Facebook</span>
+            </a>
+          </li>
+          <li class="mb-2">
+            <a href="#" style="text-decoration: none; font-size: 17px;">
+              <i class="fa-brands fa-twitter" style="color: #1DA1F2;"></i>
+              <span style="font-weight: 400; color: #333;">Twitter</span>
+            </a>
+          </li>
+          <li class="mb-2">
+            <a href="#" style="text-decoration: none; font-size: 17px;">
+              <i class="fa-brands fa-instagram" style="color: #405DE6;"></i>
+              <span style="font-weight: 400; color: #333;">Instagram</span>
+            </a>
+          </li>
+          <li class="mb-2">
+            <a href="#" style="text-decoration: none; font-size: 17px;">
+              <i class="fa-brands fa-whatsapp" style="color: 	#128C7E;"></i>
+              <span style="font-weight: 400; color: #333;">0812-2020-4223</span>
+            </a>
+          </li>
+          <li class="mb-2">
+            <a href="#" style="text-decoration: none; font-size: 17px;">
+              <i class="fa-solid fa-location-dot" style="color: #dd4b3e;"></i>
+              <span style="font-weight: 400; color: #333;">Jl. Gamprit Raya No.41, RT.004/RW.014, Jatiwaringin, Kec. Pd. Gede, Kota Bks, Jawa Barat 17411</span>
+            </a>
+          </li>
+        </ol>
       </div>
     </div>
   </div>
@@ -246,9 +265,7 @@
   <script>
     AOS.init();
   </script>
-  <script>
-  alert('Welcome Reading !');
-  </script>
+  <script src="js/angkot5.js"></script>
   <script>
     var myCarousel = document.querySelector('#carouselExampleIndicators')
     var carousel = new bootstrap.Carousel(myCarousel, {
