--- a/notaris.html
+++ b/notaris.html
@@ -72,7 +72,7 @@
       </ol>
      </div>
       <div class="container content1">
-        <div class="col-md-7 col-lg-12 text-secondary">
+        <div class=" col-lg-12 text-secondary">
           <h3 class="text-center border-bottom p-3"><strong>Pendirian PT</strong></h3>
           <h5 class="p-3"><strong>Persyaratan Pendirian PT : </strong></h5>
           <ol>
@@ -107,9 +107,29 @@
 
   <!-- Footer -->
   <footer class="bd-footer py-5 mt-4" style="background-color: #f2f2fe;">
-    <div class="container">
+    <div class="container ">
       <div class="row">
-        <div class="col-lg-6 mb-3">
+        <div class="col-lg-4 col-md-6 mb-2">
+            <ul class="list-unstyled">
+              <li class="mb-2"><a href="index.html">Home</a></li>
+              <li class="mb-2"><a href="tentang-kami.html">Tentang Kami</a></li>
+              <li class="mb-2"><a href="notaris.html">Notaris</a></li>
+              <li class="mb-2"><a href="ppat.html">PPAT</a></li>
+              <li class="mb-2"><a href="profil.html">Profil Notaris & PPAT</a></li>
+              <li class="mb-2"><a href="contact.html">Contact</a></li>
+            </ul>        
+        </div>
+        <div class="col-lg-4 col-md-6 mb-2">
+          <ul class="list-unstyled">
+            <li class="mb-2"><a href="index.html">Home</a></li>
+            <li class="mb-2"><a href="tentang-kami.html">Tentang Kami</a></li>
+            <li class="mb-2"><a href="notaris.html">Notaris</a></li>
+            <li class="mb-2"><a href="ppat.html">PPAT</a></li>
+            <li class="mb-2"><a href="profil.html">Profil Notaris & PPAT</a></li>
+            <li class="mb-2"><a href="contact.html">Contact</a></li>
+          </ul>        
+      </div>
+        <div class="col-lg-4 col-md-12 mb-2">
           <a class="d-inline-flex align-items-center mb-2 link-dark text-decoration-none" href="/">
             <span class="fs-5">NOTARIS & PPAT <br> Agus Priyantoko, SH., MKn., MH.</span>
           </a>
@@ -145,17 +165,6 @@
               </a>
             </li>
           </ol>
-        </div>
-        <div class="col-6 col-lg-3 mb-3">
-          <h5>Links</h5>
-          <ul class="list-unstyled">
-            <li class="mb-2"><a href="index.html">Home</a></li>
-            <li class="mb-2"><a href="#">Tentang Kami</a></li>
-            <li class="mb-2"><a href="notaris.html">Notaris</a></li>
-            <li class="mb-2"><a href="#">PPAT</a></li>
-            <li class="mb-2"><a href="profil.html">Profil Notaris & PPAT</a></li>
-            <li class="mb-2"><a href="#">Contact</a></li>
-          </ul>
         </div>
       </div>
     </div>
