--- a/ppat.html
+++ b/ppat.html
@@ -67,16 +67,36 @@
     <div class="col">
       <ol class="breadcrumb ms-auto mt-1">
           <li class="breadcrumb-item"><a href="index.html"><i class="fa-solid fa-house"></i></a></li>
-          <li class="breadcrumb-item active" aria-current="page">NOTARIS</li>
+          <li class="breadcrumb-item active" aria-current="page">PPAT</li>
       </ol>
      </div>
   </div>
 
   <!-- Footer -->
-  <footer class="bd-footer py-5 mt-4 fixed-bottom" style="background-color: #f2f2fe;">
-    <div class="container">
+  <footer class="bd-footer py-5 mt-4" style="background-color: #f2f2fe;">
+    <div class="container ">
       <div class="row">
-        <div class="col-lg-6 mb-3">
+        <div class="col-lg-4 col-md-6 mb-2">
+            <ul class="list-unstyled">
+              <li class="mb-2"><a href="index.html">Home</a></li>
+              <li class="mb-2"><a href="tentang-kami.html">Tentang Kami</a></li>
+              <li class="mb-2"><a href="notaris.html">Notaris</a></li>
+              <li class="mb-2"><a href="ppat.html">PPAT</a></li>
+              <li class="mb-2"><a href="profil.html">Profil Notaris & PPAT</a></li>
+              <li class="mb-2"><a href="contact.html">Contact</a></li>
+            </ul>        
+        </div>
+        <div class="col-lg-4 col-md-6 mb-2">
+          <ul class="list-unstyled">
+            <li class="mb-2"><a href="index.html">Home</a></li>
+            <li class="mb-2"><a href="tentang-kami.html">Tentang Kami</a></li>
+            <li class="mb-2"><a href="notaris.html">Notaris</a></li>
+            <li class="mb-2"><a href="ppat.html">PPAT</a></li>
+            <li class="mb-2"><a href="profil.html">Profil Notaris & PPAT</a></li>
+            <li class="mb-2"><a href="contact.html">Contact</a></li>
+          </ul>        
+      </div>
+        <div class="col-lg-4 col-md-12 mb-2">
           <a class="d-inline-flex align-items-center mb-2 link-dark text-decoration-none" href="/">
             <span class="fs-5">NOTARIS & PPAT <br> Agus Priyantoko, SH., MKn., MH.</span>
           </a>
@@ -112,17 +132,6 @@
               </a>
             </li>
           </ol>
-        </div>
-        <div class="col-6 col-lg-3 mb-3">
-          <h5>Links</h5>
-          <ul class="list-unstyled">
-            <li class="mb-2"><a href="index.html">Home</a></li>
-            <li class="mb-2"><a href="tentang-kami.html">Tentang Kami</a></li>
-            <li class="mb-2"><a href="notaris.html">Notaris</a></li>
-            <li class="mb-2"><a href="ppat.html">PPAT</a></li>
-            <li class="mb-2"><a href="profil.html">Profil Notaris & PPAT</a></li>
-            <li class="mb-2"><a href="contact.html">Contact</a></li>
-          </ul>
         </div>
       </div>
     </div>
